-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.0.0
-
None
-
9de57cb18bd001fec33748bddc7679814b0ac45f
The peculiar input sequence has not been identified, but it is in the file qtbase/src/corelib/tools/qsharedpointer.cpp
Nor does this infinite loop occur when qdoc3 is run on its own. It only happens when qdoc3 is run as part of the build system.
For Gerrit Dashboard: QTBUG-24324 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
16521,1 | qdoc3: infinite loop caused by mysterious input sequence | master | qt/qtdoc | Status: MERGED | +2 | 0 |