qdoc3: infinite loop caused by mysterious input sequence

The input sequence has not been identified, but a fix
has been identified. The fix is to test for Tok_Eoi in
a do-while loop.

Task-number:  QTBUG-24324
Change-Id: Ia0cf00417bc182724ab5fd4146c9696669eecc3b
Reviewed-by: Casper van Donderen <casper.vandonderen@nokia.com>